examples/memefactory: Fix typo

--- a/examples/memefactory/data-source.yaml
+++ b/examples/memefactory/data-source.yaml
@@ -33,7 +33,7 @@ datasets:
         - Vote
         - Tag
         - MemeToken
-      # Will be injected to into mapping module
+      # Will be injected into the mapping module
       abis:
         - name: Meme
           source:
