--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "commander": "^2.15.1",
     "fs-extra": "^6.0.1",
     "immutable": "^3.8.2",
-    "js-yaml": "^3.12.0"
+    "js-yaml": "^3.12.0",
+    "prettier": "^1.13.5"
   },
   "module": "src/index.ts",
   "types": "index.d.ts",
