--- a/examples/memefactory/tsconfig.json
+++ b/examples/memefactory/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "./node_modules/the-graph-wasm/tsconfig.json",
-  "files": ["mapping.ts"]
+  "files": ["mapping.ts", "types/Meme.types.ts", "types/MemeRegistry.types.ts"]
 }
