--- a/examples/memefactory/data-source.yaml
+++ b/examples/memefactory/data-source.yaml
@@ -13,7 +13,7 @@ datasets:
   - data:
       kind: ethereum/contract
       name: MemeRegistry
-      address: 0x06012c8cf97BEaD5deAe237070F9587f8E7A266d
+      address: "06012c8cf97BEaD5deAe237070F9587f8E7A266d"
       structure:
         abi: MemeRegistry
     mapping:
