--- a/examples/memefactory/package.json
+++ b/examples/memefactory/package.json
@@ -2,7 +2,8 @@
   "name": "memefactory",
   "scripts": {
     "codegen": "the-graph-wasm generate-types --output-dir types/ data-source.yaml",
-    "build": "the-graph-wasm data-source.yaml"
+    "build": "the-graph-wasm compile data-source.yaml",
+    "build-wast": "the-graph-wasm compile -t wast data-source.yaml"
   },
   "devDependencies": {
     "the-graph-wasm": "../../"
