--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "./node_modules/assemblyscript/std/assembly/tsconfig.json",
-  "files": ["global.d.ts", "src/runtime.ts"]
+  "files": ["index.d.ts", "src/index.ts"]
 }
