--- a/examples/example-event-handler/data-source.yaml
+++ b/examples/example-event-handler/data-source.yaml
@@ -37,7 +37,7 @@ datasets:
       eventHandlers:
           # This event will be subscribed to and trigger the handler function
           # each time it is emitted.
-        - event: ExampleEvent(bytes32)
+        - event: ExampleEvent(string)
           # This is the name of the handler function that will be exported
           # by the WASM module.
           handler: handleExampleEvent
