--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
     "fs-extra": "^6.0.1",
+    "glob": "^7.1.2",
     "immutable": "^3.8.2",
     "js-yaml": "^3.12.0",
     "prettier": "^1.13.5"
