--- a/examples/example-event-handler/package.json
+++ b/examples/example-event-handler/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "memefactory",
+  "name": "example-event-handler",
   "scripts": {
-    "codegen": "the-graph-wasm generate-types --output-dir types/ data-source.yaml",
-    "build": "the-graph-wasm compile data-source.yaml",
-    "build-wast": "the-graph-wasm compile -t wast data-source.yaml"
+    "codegen": "graph codegen --output-dir types/ data-source.yaml",
+    "build": "graph build data-source.yaml",
+    "build-ipfs": "graph build --ipfs /ip4/127.0.0.1/tcp/5001 data-source.yaml",
+    "build-wast": "graph build -t wast data-source.yaml"
   },
   "devDependencies": {
-    "the-graph-wasm": "../../"
+    "graph-cli": "ssh://git@github.com/graphprotocol/graph-cli"
   }
 }
