--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ipfs-api": "^22.2.1",
     "js-yaml": "^3.12.0",
     "prettier": "^1.13.5",
+    "request": "^2.88.0",
     "winston": "^3.0.0"
   },
   "module": "src/runtime/index.ts",
