--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "glob": "^7.1.2",
     "immutable": "^3.8.2",
     "ipfs-api": "^22.2.1",
+    "jayson": "^2.0.6",
     "js-yaml": "^3.12.0",
     "prettier": "^1.13.5",
     "request": "^2.88.0",
