--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "graph-cli",
-  "version": "0.2.4",
+  "name": "@graphprotocol/graph-cli",
+  "version": "0.2.5",
   "description": "CLI for building for and deploying to The Graph",
   "dependencies": {
-    "assemblyscript": "https://github.com/AssemblyScript/assemblyscript#c4ebc8c291c1068da73ddf1a381eab93e1f69e11",
+    "assemblyscript":
+      "https://github.com/AssemblyScript/assemblyscript#c4ebc8c291c1068da73ddf1a381eab93e1f69e11",
     "chalk": "^2.4.1",
     "chokidar": "^2.0.4",
     "commander": "^2.15.1",
