--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.3.2",
   "description": "CLI for building for and deploying to The Graph",
   "dependencies": {
-    "assemblyscript": "https://github.com/AssemblyScript/assemblyscript#c4ebc8c291c1068da73ddf1a381eab93e1f69e11",
+    "assemblyscript": "git+https://github.com/AssemblyScript/assemblyscript.git#c4ebc8c291c1068da73ddf1a381eab93e1f69e11",
     "chalk": "^2.4.1",
     "chokidar": "^2.0.4",
-    "commander": "^2.15.1",
-    "debug": "^3.1.0",
+    "commander": "^2.18.0",
+    "debug": "^3.2.5",
     "fs-extra": "^6.0.1",
-    "glob": "^7.1.2",
+    "glob": "^7.1.3",
     "immutable": "^3.8.2",
-    "ipfs-api": "^22.2.1",
+    "ipfs-api": "^22.3.0",
     "jayson": "^2.0.6",
     "js-yaml": "^3.12.0",
-    "prettier": "^1.13.5",
+    "prettier": "^1.14.3",
     "request": "^2.88.0",
-    "winston": "^3.0.0"
+    "winston": "^3.1.0"
   },
   "bin": {
     "graph": "./graph.js",
