--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ node_js:
 cache: yarn
 script:
   - yarn test
-  - cd examples/example-event-handler && ../../graph.js codegen --output-dir src/types --debug
-  - cd examples/example-event-handler && ../../graph.js build --debug
+  - cd examples/example-event-handler
+  - ../../graph.js codegen --output-dir src/types --debug
+  - ../../graph.js build --debug
