graph.js, yarn.lock, .travis.yml: Create auth command: stores token on system
Use the keytar node module for storing the auth token on the system's keychain
and add the required libsecret-1-dev ubunto package to the travis environment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - "9"
   - "10"
 cache: yarn
+before_install:
+  - sudo apt-get install libsecret-1-dev
 script:
   - yarn test
   - cd examples/example-subgraph
