--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ipfs-api": "^22.2.1",
     "jayson": "^2.0.6",
     "js-yaml": "^3.12.0",
+    "keytar": "^4.3.0",
     "pkginfo": "^0.4.1",
     "prettier": "^1.13.5",
     "request": "^2.88.0",
