travis.yml: Enter example dir before scripts, add graph auth script

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ script:
   - yarn
   - ../../graph.js codegen --output-dir src/types --debug
   - ../../graph.js build --debug
+  - ../../graph.js auth node authtoken
