examples: Bump graph-ts to v0.4.0

--- a/examples/example-subgraph/package.json
+++ b/examples/example-subgraph/package.json
@@ -8,6 +8,6 @@
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "git+https://github.com/graphprotocol/graph-cli.git",
-    "@graphprotocol/graph-ts": "git+https://github.com/graphprotocol/graph-ts.git#master"
+    "@graphprotocol/graph-ts": "^0.4.0"
   }
 }
