--- a/examples/example-subgraph/package.json
+++ b/examples/example-subgraph/package.json
@@ -7,7 +7,7 @@
     "build-wast": "graph build -t wast subgraph.yaml"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "git+https://github.com/graphprotocol/graph-cli.git",
-    "@graphprotocol/graph-ts": "git+https://github.com/graphprotocol/graph-ts.git#master"
+    "@graphprotocol/graph-cli": "git+http://github.com/graphprotocol/graph-cli#jannis/bump-asc",
+    "@graphprotocol/graph-ts": "git+http://github.com/graphprotocol/graph-ts#jannis/bump-asc"
   }
 }
