--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "glob": "^7.1.2",
     "graphql": "^14.0.2",
     "immutable": "^3.8.2",
-    "ipfs-api": "^22.2.1",
+    "ipfs-http-client": "^28.1.2",
     "jayson": "^2.0.6",
     "js-yaml": "^3.12.0",
     "keytar": "^4.3.0",
