--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "chokidar": "^2.0.4",
     "commander": "^2.18.0",
     "debug": "^3.1.0",
-    "fs-extra": "^6.0.1",
+    "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
     "graphql": "^14.0.2",
     "immutable": "^3.8.2",
@@ -19,6 +19,7 @@
     "pkginfo": "^0.4.1",
     "prettier": "^1.13.5",
     "request": "^2.88.0",
+    "which": "^1.3.1",
     "winston": "^3.0.0"
   },
   "bin": {
