--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "^3.1.0",
     "fs-extra": "^7.0.1",
     "glob": "^7.1.2",
+    "gluegun": "^3.0.0",
     "graphql": "^14.0.2",
     "immutable": "^3.8.2",
     "ipfs-http-client": "^28.1.2",
