--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "devDependencies": {
     "jest": "^23.6.0",
-    "spawn-command": "^0.0.2-1"
+    "spawn-command": "^0.0.2-1",
+    "strip-ansi": "^5.1.0"
   },
   "scripts": {
     "test": "jest --verbose"
