--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "js-yaml": "^3.12.0",
     "keytar": "^4.3.0",
     "node-fetch": "^2.3.0",
+    "pkginfo": "^0.4.1",
     "prettier": "^1.13.5",
     "request": "^2.88.0"
   },
