NPM, Yarn, .eslintrc: Add eslint with rudimentary configuration

--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "graph": "bin/graph"
   },
   "devDependencies": {
+    "eslint": "^5.15.3",
     "jest": "^24.3.0",
     "spawn-command": "^0.0.2-1",
-    "strip-ansi": "^5.1.0"
+    "strip-ansi": "^5.1.0",
+    "tern": "^0.23.0"
   },
   "scripts": {
     "test": "jest --verbose"
