--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,7 @@ typings/
 
 # next.js build output
 .next
+
+# Example subgraph build
+examples/example-subgraph/build
+examples/example-subgraph/generated
