--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "ipfs-http-client": "^28.1.2",
     "jayson": "^2.0.6",
     "js-yaml": "^3.12.0",
-    "keytar": "^4.3.0",
     "node-fetch": "^2.3.0",
     "pkginfo": "^0.4.1",
     "prettier": "^1.13.5",
     "request": "^2.88.0"
+  },
+  "optionalDependencies": {
+    "keytar": "^4.3.0"
   },
   "bin": {
     "graph": "bin/graph"
