--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "chalk": "^3.0.0",
     "chokidar": "^3.0.2",
     "debug": "^4.1.1",
-    "docker-compose": "^0.16.0",
+    "docker-compose": "https://github.com/jannis/docker-compose#jannis/exit-code",
     "dockerode": "^2.5.8",
     "fs-extra": "^8.1.0",
     "glob": "^7.1.2",
