--- a/resources/test/docker-compose.yml
+++ b/resources/test/docker-compose.yml
@@ -6,9 +6,11 @@ services:
       - '8000:8000'
       - '8001:8001'
       - '8020:8020'
+      - '8030:8030'
+      - '8040:8040'
     depends_on:
       - ipfs
-      - parity
+      - ethereum
       - postgres
     environment:
       postgres_host: postgres:5432
@@ -16,9 +18,9 @@ services:
       postgres_pass: let-me-in
       postgres_db: graph-node
       ipfs: 'ipfs:5001'
-      ethereum: 'dev:http://parity:8545'
+      ethereum: 'test:http://ethereum:8545'
       GRAPH_LOG: trace
-  parity:
+  ethereum:
     image: trufflesuite/ganache-cli:latest
     ports:
       - '8545:8545'
