--- a/resources/test/docker-compose.yml
+++ b/resources/test/docker-compose.yml
@@ -14,9 +14,9 @@ services:
       - postgres
     environment:
       postgres_host: postgres:5432
-      postgres_user: graph-node
+      postgres_user: graph
       postgres_pass: let-me-in
-      postgres_db: graph-node
+      postgres_db: graph
       ipfs: 'ipfs:5001'
       ethereum: 'test:http://ethereum:8545'
       GRAPH_LOG: trace
@@ -35,6 +35,6 @@ services:
     ports:
       - '5432:5432'
     environment:
-      POSTGRES_USER: graph-node
+      POSTGRES_USER: graph
       POSTGRES_PASSWORD: let-me-in
-      POSTGRES_DB: graph-node
+      POSTGRES_DB: graph
