examples: Depend on graph-ts branch with overloaded functions support

--- a/examples/example-subgraph/package.json
+++ b/examples/example-subgraph/package.json
@@ -8,6 +8,6 @@
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "git+http://github.com/graphprotocol/graph-cli#master",
-    "@graphprotocol/graph-ts": "git+http://github.com/graphprotocol/graph-ts#master"
+    "@graphprotocol/graph-ts": "https://github.com/graphprotocol/graph-ts#jannis/overloaded-contract-functions"
   }
 }
