command/test: Change default test environment ports
Moving all host ports from e.g. 8000 and 5432 to 18000 and 15432 allows
to run the tests alongside an already running graph-node environment. This
is particularly useful for developers, who may want to run tests while
keeping their development environment up and running.

--- a/examples/basic-event-handlers/package.json
+++ b/examples/basic-event-handlers/package.json
@@ -5,8 +5,8 @@
     "codegen": "graph codegen",
     "build": "graph build",
     "test": "truffle test --network test",
-    "create-local": "graph create test/basic-event-handlers --node http://127.0.0.1:8020",
-    "deploy-local": "graph deploy test/basic-event-handlers --ipfs http://localhost:5001 --node http://127.0.0.1:8020"
+    "create-test": "graph create test/basic-event-handlers --node http://127.0.0.1:18020",
+    "deploy-test": "graph deploy test/basic-event-handlers --ipfs http://localhost:15001 --node http://127.0.0.1:18020"
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "^0.17.1",
