--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "bin": {
     "graph": "bin/graph"
   },
+  "main": "src/cli",
   "devDependencies": {
     "eslint": "^6.0.1",
     "jest": "^25.1.0",
