--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jayson": "^3.0.2",
     "js-yaml": "^3.13.1",
     "node-fetch": "^2.3.0",
+    "normalize-url": "^5.2.1",
     "pkginfo": "^0.4.1",
     "prettier": "^1.13.5",
     "request": "^2.88.0",
