Use closest official assembly-script release

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.20.0",
   "description": "CLI for building for and deploying to The Graph",
   "dependencies": {
-    "assemblyscript": "https://github.com/AssemblyScript/assemblyscript#36040d5b5312f19a025782b5e36663823494c2f3",
+    "assemblyscript": "^0.8.0",
     "chalk": "^3.0.0",
     "chokidar": "^3.0.2",
     "debug": "^4.1.1",
