--- a/examples/example-subgraph/package.json
+++ b/examples/example-subgraph/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "@graphprotocol/graph-cli": "https://github.com/graphprotocol/graph-cli#master",
     "@graphprotocol/graph-ts": "https://github.com/graphprotocol/graph-ts#master"
+  },
+  "resolutions": {
+    "assemblyscript": "^0.8.0"
   }
 }
