--- a/examples/basic-event-handlers/package.json
+++ b/examples/basic-event-handlers/package.json
@@ -20,6 +20,6 @@
     "truffle-hdwallet-provider": "^1.0.4"
   },
   "resolutions": {
-    "assemblyscript": "^0.8.0"
+    "assemblyscript": "git+https://github.com/AssemblyScript/assemblyscript.git#v0.6"
   }
 }
