--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.20.0",
   "description": "CLI for building for and deploying to The Graph",
   "dependencies": {
-    "assemblyscript": "^0.8.0",
+    "assemblyscript": "git+https://github.com/AssemblyScript/assemblyscript.git#v0.6",
     "chalk": "^3.0.0",
     "chokidar": "^3.0.2",
     "debug": "^4.1.1",
