--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@graphprotocol/graph-cli-private",
-  "version": "0.20.5-studio",
+  "name": "@graphprotocol/graph-cli",
+  "version": "0.21.0",
   "description": "CLI for building for and deploying to The Graph",
   "dependencies": {
     "assemblyscript": "git+https://github.com/AssemblyScript/assemblyscript.git#v0.6",
