scaffold: Point to new alpha graph-ts release

--- a/examples/basic-event-handlers/package.json
+++ b/examples/basic-event-handlers/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "https://github.com/graphprotocol/graph-cli#otavio/update-assembly-script",
-    "@graphprotocol/graph-ts": "https://github.com/graphprotocol/graph-ts#otavio/update-assembly-script",
+    "@graphprotocol/graph-ts": "0.22.0-alpha.0",
     "apollo-fetch": "^0.7.0"
   },
   "dependencies": {
