--- a/examples/example-subgraph/package.json
+++ b/examples/example-subgraph/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@graphprotocol/graph-cli": "https://github.com/graphprotocol/graph-cli#otavio/update-assembly-script",
-    "@graphprotocol/graph-ts": "https://github.com/graphprotocol/graph-ts#otavio/update-assembly-script"
+    "@graphprotocol/graph-ts": "0.22.0-alpha.0"
   },
   "resolutions": {
     "assemblyscript": "0.19.10"
