fix: Remove ciclic -cli dependency
This is very important because before we would download
graph-cli from the latest version to run the tests against it.

However this is bad, because we could not be sure a new version
passes against the tests from the example folder, since the release
needed to be done before (it would go to master still pointing to
the old version).

This commit fixes the issue by pointing to the local graph-cli
so that the example tests fail before we do a release. This also
removes the necessity to bump the version everytime on these files.

--- a/examples/example-subgraph/package.json
+++ b/examples/example-subgraph/package.json
@@ -1,13 +1,12 @@
 {
   "name": "example-event-handler",
   "scripts": {
-    "codegen": "graph codegen --output-dir src/types/ subgraph.yaml",
-    "build": "graph build subgraph.yaml",
-    "build-ipfs": "graph build --ipfs /ip4/127.0.0.1/tcp/5001 subgraph.yaml",
-    "build-wast": "graph build -t wast subgraph.yaml"
+    "codegen": "../../bin/graph codegen --output-dir src/types/ subgraph.yaml",
+    "build": "../../bin/graph build subgraph.yaml",
+    "build-ipfs": "../../bin/graph build --ipfs /ip4/127.0.0.1/tcp/5001 subgraph.yaml",
+    "build-wast": "../../bin/graph build -t wast subgraph.yaml"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "0.22.0-alpha.0",
     "@graphprotocol/graph-ts": "0.22.0-alpha.0"
   },
   "resolutions": {
