--- a/examples/basic-event-handlers/package.json
+++ b/examples/basic-event-handlers/package.json
@@ -2,14 +2,13 @@
   "name": "basic-event-handlers",
   "version": "0.1.0",
   "scripts": {
-    "codegen": "graph codegen",
-    "build": "graph build",
+    "codegen": "../../bin/graph codegen",
+    "build": "../../bin/graph build",
     "test": "truffle test --network test",
-    "create-test": "graph create test/basic-event-handlers --node http://127.0.0.1:18020",
-    "deploy-test": "graph deploy test/basic-event-handlers --ipfs http://localhost:15001 --node http://127.0.0.1:18020"
+    "create-test": "../../bin/graph create test/basic-event-handlers --node http://127.0.0.1:18020",
+    "deploy-test": "../../bin/graph deploy test/basic-event-handlers --version-label v0.0.1 --ipfs http://localhost:15001 --node http://127.0.0.1:18020"
   },
   "devDependencies": {
-    "@graphprotocol/graph-cli": "0.22.0-alpha.0",
     "@graphprotocol/graph-ts": "0.22.0-alpha.0",
     "apollo-fetch": "^0.7.0"
   },
