--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "prettier": "^1.13.5",
     "request": "^2.88.0",
     "tmp-promise": "^3.0.2",
-    "yaml": "^1.5.1"
+    "yaml": "^1.5.1",
+    "binary-install": "^0.1.1",
+    "xmlhttprequest": "^1.8.0"
   },
   "bin": {
     "graph": "bin/graph"
