--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "request": "^2.88.0",
     "tmp-promise": "^3.0.2",
     "yaml": "^1.5.1",
-    "binary-install": "^0.1.1",
+    "binary-install-raw": "0.0.1",
     "xmlhttprequest": "^1.8.0"
   },
   "bin": {
