deps: Lock 'which' dependency
This dependency was being used by the project, but it
only worked because some of our dependencies used it.

This commit locks the version (I've investigated first
which we're using today).

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "request": "^2.88.0",
     "semver": "7.3.5",
     "tmp-promise": "^3.0.2",
+    "which": "2.0.2",
     "yaml": "^1.5.1"
   },
   "bin": {
