--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "CLI for building for and deploying to The Graph",
   "dependencies": {
     "assemblyscript": "0.19.10",
+    "binary-install-raw": "0.0.13",
     "chalk": "^3.0.0",
     "chokidar": "^3.0.2",
     "debug": "^4.1.1",
@@ -22,9 +23,9 @@
     "prettier": "^1.13.5",
     "request": "^2.88.0",
     "tmp-promise": "^3.0.2",
-    "yaml": "^1.5.1",
-    "binary-install-raw": "0.0.13",
-    "xmlhttprequest": "^1.8.0"
+    "which": "2.0.2",
+    "xmlhttprequest": "^1.8.0",
+    "yaml": "^1.5.1"
   },
   "bin": {
     "graph": "bin/graph"
