--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "CLI for building for and deploying to The Graph",
   "dependencies": {
     "assemblyscript": "0.19.10",
+    "binary-install-raw": "0.0.13",
     "chalk": "^3.0.0",
     "chokidar": "^3.0.2",
     "debug": "^4.1.1",
