--- a/tests/cli/validation/near-is-valid/subgraph.yaml
+++ b/tests/cli/validation/near-is-valid/subgraph.yaml
@@ -7,7 +7,7 @@ dataSources:
   - kind: near
     name: NearSubgraph
     source:
-      address: wnear.flux-dev
+      account: wnear.flux-dev
       startBlock: 1
     mapping:
       apiVersion: 0.0.5
