--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dockerode": "^2.5.8",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.2",
-    "gluegun": "^4.3.1",
+    "gluegun": "https://github.com/otaviopace/gluegun#fix/pin-colors-dependency",
     "graphql": "^15.5.0",
     "immutable": "^3.8.2",
     "ipfs-http-client": "^34.0.0",
