--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Set npm credentials
         run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" >> $HOME/.npmrc
+          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
           npm whoami
 
       - name: Publish package
