--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   cancel-previous:
-    name: "Cancel Previous Runs"
+    name: Cancel Previous Runs
     runs-on: ubuntu-latest
     timeout-minutes: 3
     steps:
@@ -24,7 +24,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/setup-node@v2-beta
         with:
-          node-version: "16.10.0"
+          node-version: 16.10.0
           registry-url: https://registry.npmjs.org/
 
       - name: Set npm credentials & Publish
