fixed version and cli

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "ewf-graph-cli",
+  "name": "@graphprotocol/ew-graph-cli",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/energywebfoundation/graph-cli.git"
   },
   "homepage": "https://github.com/energywebfoundation/graph-cli.git#readme",
-  "version": "0.27.0",
+  "version": "0.26.0",
   "description": "CLI for building for and deploying to The Graph",
   "dependencies": {
     "assemblyscript": "0.19.10",
