--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@graphprotocol/ew-graph-cli",
+  "name": "@energyweb/ew-graph-cli",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/energywebfoundation/graph-cli.git"
