--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
-name: Publish
+name: Release
 
 on:
   push:
-    branches: [master, publish_ewf_npm]
+    branches: [release]
 
 jobs:
   cancel-previous:
