--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "assemblyscript": "0.19.10",
     "binary-install-raw": "0.0.13",
-    "chalk": "^3.0.0",
+    "chalk": "3.0.0",
     "chokidar": "^3.0.2",
     "debug": "^4.1.1",
     "docker-compose": "^0.23.2",
