--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "assemblyscript": "0.19.10",
     "binary-install-raw": "0.0.13",
     "chalk": "3.0.0",
-    "chokidar": "^3.0.2",
+    "chokidar": "3.5.1",
     "debug": "^4.1.1",
     "docker-compose": "^0.23.2",
     "dockerode": "^2.5.8",
