add partial account filters for near

--- a/tests/cli/validation/near-is-valid/subgraph.yaml
+++ b/tests/cli/validation/near-is-valid/subgraph.yaml
@@ -10,6 +10,14 @@ dataSources:
     source:
       account: wnear.flux-dev
       startBlock: 1
+      accounts:
+        prefixes:
+          - some-prefix
+          - a-prefix.with-dot
+        suffixes:
+          - suffix.near
+          - near
+          - another-suffix.testnet
     mapping:
       apiVersion: 0.0.5
       language: wasm/assemblyscript
