Float subgraph uncrashable integration as a package (#987)
* Float subgraph uncrashable integration as a package

* review changes

* Update to latest package

* final latest version for integration

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "4.3.1",
     "docker-compose": "0.23.4",
     "dockerode": "2.5.8",
+    "@float-capital/float-subgraph-uncrashable": "^0.0.0-alpha.4",
     "fs-extra": "9.0.0",
     "glob": "7.1.6",
     "gluegun": "https://github.com/edgeandnode/gluegun#v4.3.1-pin-colors-dep",
