--- a/examples/basic-event-handlers/package.json
+++ b/examples/basic-event-handlers/package.json
@@ -1,5 +1,6 @@
 {
   "name": "basic-event-handlers",
+  "private": true,
   "version": "0.1.0",
   "scripts": {
     "codegen": "../../packages/cli/bin/graph codegen",
