--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -45,5 +45,8 @@
     "test": "jest --verbose",
     "test:init": "jest tests/cli/init.test.js --verbose",
     "test:validation": "jest tests/cli/validation.test.js --verbose"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
