--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.2",
+    "bob-the-bundler": "^4.1.0",
     "eslint": "6.8.0",
     "jest": "26.0.0",
     "typescript": "^4.9.4"
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "type-check": "tsc --noEmit",
-    "build": "exit 0",
+    "build": "pnpm --filter=@graphprotocol/graph-cli run build",
     "release": "changeset publish",
     "test:cli": "pnpm --filter @graphprotocol/graph-cli test"
   }
