--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.2",
-    "bob-the-bundler": "^4.1.0",
     "eslint": "6.8.0",
-    "jest": "26.0.0",
-    "typescript": "^4.9.4"
+    "jest": "26.0.0"
   },
   "repository": {
     "type": "git",
@@ -22,7 +20,7 @@
     "pnpm": ">=7.14.2"
   },
   "scripts": {
-    "type-check": "tsc --noEmit",
+    "type-check": "pnpm --filter=@graphprotocol/graph-cli run type-check",
     "build": "pnpm --filter=@graphprotocol/graph-cli run build",
     "release": "changeset publish",
     "test:cli": "pnpm --filter @graphprotocol/graph-cli test"
