unnecessary declarations and type-check

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -8,10 +8,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "esModuleInterop": true,
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "useUnknownInCatchVariables": false,
-    "declaration": true,
+    "declaration": false,
     "allowJs": true
   },
   "include": ["./src"]
