--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # For some reason tests take forever on node 14 so will re-visit in future when we decide what versions to test on 
+        # For some reason tests take forever on node 14 so will re-visit in future when we decide what versions to test on
         node-version: [16, 18]
     steps:
       - name: Checkout Repository
@@ -50,8 +50,11 @@ jobs:
       - name: Install Dependencies
         run: pnpm i
 
+      - name: Lint
+        run: pnpm lint
+
       - name: Build Packages
-        run: pnpm build
+        run: pnpm build # will also check types
 
       - name: Run Tests
         uses: nick-fields/retry@v2
