--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,6 @@
   "semi": false,
   "trailingComma": "all",
   "printWidth": 90,
-  "singleQuote": true
+  "singleQuote": true,
+  "arrowParens": "avoid"
 }
