--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -10,6 +10,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "useUnknownInCatchVariables": false,
+    "allowSyntheticDefaultImports": true,
     "declaration": false,
     "skipLibCheck": true,
     "allowJs": true
