--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,10 +52,10 @@
   },
   "scripts": {
     "test": "jest --verbose",
-    "test:init": "jest tests/cli/init.test.js --verbose",
-    "test:validation": "jest tests/cli/validation.test.js --verbose",
+    "test:init": "jest tests/cli/init.test.ts --verbose",
+    "test:validation": "jest tests/cli/validation.test.ts --verbose",
     "type-check": "tsc --noEmit",
-    "build": "tsc --build && copyfiles -u 1 src/**/*.graphql dist/ && chmod +x ./dist/bin.js"
+    "build": "tsc -b tsconfig.build.json && copyfiles -u 1 src/**/*.graphql dist/ && chmod +x ./dist/bin.js"
   },
   "publishConfig": {
     "access": "public"
