--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,47 @@ on:
   pull_request:
 
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7
+
+      - name: Get pnpm store path
+        id: pnpm-store
+        run: echo "PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - name: Cache pnpm
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-store.outputs.PATH }}
+          key:
+            ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-${{
+            hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-
+
+      - name: Install Dependencies
+        run: pnpm i
+
+      - name: Lint
+        run: pnpm lint
+
   cli:
     name: CLI / nodejs v${{ matrix.node-version }}
     runs-on: ubuntu-latest
+    needs: [lint]
     strategy:
       fail-fast: false
       matrix:
@@ -52,9 +90,6 @@ jobs:
       - name: Install Dependencies
         run: pnpm i
 
-      - name: Lint
-        run: pnpm lint
-
       - name: Build Packages
         run: pnpm build # will also check types
 
@@ -67,6 +102,7 @@ jobs:
 
   event-handler:
     name: Basic Event Handlers
+    needs: [lint]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -108,3 +144,48 @@ jobs:
           timeout_minutes: 10
           max_attempts: 3
           command: pnpm run --filter="basic-event-handlers" test
+
+  ts:
+    name: Graph TS
+    needs: [lint]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Install Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7
+
+      - name: Get pnpm store path
+        id: pnpm-store
+        run: echo "PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+      - name: Cache pnpm
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-store.outputs.PATH }}
+          key:
+            ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-${{
+            hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-graphql-v${{ matrix.graphql-version }}-
+
+      - name: Install Dependencies
+        run: pnpm i
+
+      - name: Build Packages
+        run: pnpm build # will also check types
+
+      - name: Run Tests
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 3
+          command: pnpm run test:ts -- --forceExit
