--- a/examples/arweave-blocks-transactions/package.json
+++ b/examples/arweave-blocks-transactions/package.json
@@ -5,17 +5,15 @@
   "repository": "https://github.com/graphprotocol/example-subgraph",
   "license": "MIT",
   "private": true,
-
   "scripts": {
-    "codegen": "graph codegen",
     "build": "graph build",
-    "create-local": "graph create arweave-example --node http://localhost:8020",
-    "deploy-local": "graph deploy arweave-example -l v0.1.0 --ipfs http://localhost:5001 --node http://localhost:8020",
-    "remove-local": "graph remove arweave-example --node http://localhost:8020",
+    "codegen": "graph codegen",
     "create": "graph create arweave-example --node https://api.thegraph.com/deploy/",
-    "deploy": "graph deploy arweave-example --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/"
+    "create-local": "graph create arweave-example --node http://localhost:8020",
+    "deploy": "graph deploy arweave-example --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploy-local": "graph deploy arweave-example -l v0.1.0 --ipfs http://localhost:5001 --node http://localhost:8020",
+    "remove-local": "graph remove arweave-example --node http://localhost:8020"
   },
-
   "devDependencies": {
     "@graphprotocol/graph-cli": "workspace:*",
     "@graphprotocol/graph-ts": "workspace:*"
